name:                site
version:             2.1.0
synopsis:            My personal Hakyll site
homepage:            https://ruudvanasseldonk.com
license:             GPL
license-file:        licence
author:              Ruud van Asseldonk
maintainer:          dev@veniogames.com
copyright:           Ruud van Asseldonk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ruud-v-a/ruudvanasseldonk.com.git

executable site
  main-is:             Site.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs -threaded
  default-language:    Haskell2010

  build-depends: base
               , hakyll
               , pandoc
               , old-locale
               , time-locale-compat
               , time
               , containers
               , filepath
